@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Repo 3"
-.TH SBO::Lib::Repo 3 "Pungenday, The Aftermath 66, 3190 YOLD" "" "sbotools 3.2.1"
+.TH SBO::Lib::Repo 3 "Prickle-Prickle, The Aftermath 67, 3190 YOLD" "" "sbotools 3.2.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -176,8 +176,10 @@ write, it returns a false value. Otherwise, it returns a true value.
 \&\f(CW$repo_path\fR if the \f(CW$url\fR repository is not present. If it is, it runs
 \&\f(CW\*(C`git fetch && git reset \-\-hard origin\*(C'\fR.
 .PP
-If \f(CW\*(C`GIT_BRANCH\*(C'\fR is set, or the if running or configured Slackware version has a
-recommended git branch, \f(CW\*(C`git checkout\*(C'\fR is attempted. If successful, \f(CW\*(C`git pull\*(C'\fR follows.
+If \f(CW\*(C`GIT_BRANCH\*(C'\fR is set, or if the running or configured Slackware version has a
+recommended git branch, existence is checked with \f(CW\*(C`git ls\-remote\*(C'\fR. If the branch does not
+exist, the user is prompted to continue. The script continues with the upstream default
+branch if the repo is to be cloned, or with the existing branch otherwise.
 .PP
 If \f(CW\*(C`GPG_VERIFY\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR, \f(CW\*(C`gnupg\*(C'\fR verification proceeds with \f(CWverify_git_commit($branch)\fR
 at the end of the subroutine.
